--- a/eeg/connection_app/android/app/build.gradle
+++ b/eeg/connection_app/android/app/build.gradle
@@ -47,7 +47,9 @@ android {
         applicationId "com.example.connection_app"
         // You can update the following values to match your application needs.
         // For more information, see: https://docs.flutter.dev/deployment/android#reviewing-the-gradle-build-configuration.
-        minSdkVersion flutter.minSdkVersion
+        // For Flutter Blue Plus to work (https://pub.dev/packages/flutter_blue):
+        // minSdkVersion flutter.minSdkVersion
+        minSdkVersion 19
         targetSdkVersion flutter.targetSdkVersion
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
